Initialing the testing structure.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = distmeta
 version = 0.0
 author = Michael Mulich
 author_email = michael.mulich@gmail.com
-summary = Python Distribute Metadata library
+summary = Python Distribute Metadata Library
 home_page = https://bitbucket.org/pumazi/distmeta/
 license = BSD
 
@@ -13,6 +13,9 @@ classifier =
 
 requires_dist =
     Distutils2
+
+# Testing Requires:
+#    unittest2
 
 [files]
 
