--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = distmeta
-version = 0.0
+version = 0.1
 author = Michael Mulich
 author_email = michael.mulich@gmail.com
 summary = Python Distribute Metadata Library
@@ -8,7 +8,7 @@ home_page = https://bitbucket.org/pumazi/distmeta/
 license = BSD
 
 classifier =
-    Development Status :: 1 - Planning
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: BSD License
 
 requires_dist =
