--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = distmeta
-version = 0.1
+version = 0.2
 author = Michael Mulich
 author_email = michael.mulich@gmail.com
 summary = Python Distribute Metadata Library
@@ -18,4 +18,4 @@ requires_dist =
 #    unittest2
 
 [files]
-
+package = distmeta
