Name change from distmeta to pkgmeta.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,16 @@
 [metadata]
-name = distmeta
-version = 0.2
+name = pkgmeta
+version = 0.3a1
 author = Michael Mulich
 author_email = michael.mulich@gmail.com
-summary = Python Distribute Metadata Library
-home_page = https://bitbucket.org/pumazi/distmeta/
+summary = Python Package Metadata Library
+home_page = https://bitbucket.org/pumazi/pkgmeta/
 license = BSD
 
 classifier =
     Development Status :: 3 - Alpha
     License :: OSI Approved :: BSD License
 
-requires_dist =
-    Distutils2
-
-# Testing Requires:
-#    unittest2
 
 [files]
-package = distmeta
+package = pkgmeta
