Configuration for repository global setting and repository sources list.

--- a/pkgmeta/base_config/pkgmeta.cfg
+++ b/pkgmeta/base_config/pkgmeta.cfg
@@ -1,12 +1,13 @@
 # Any section within a pkgmeta.cfg is considered a repository configuration.
 #
 # Special sections include:
-#     _global_   -- Location of the global settings
+#     global   -- Location of the global settings
 #
-# Sections beginning and ending with an underscore (_) are reserved with
-# internal use. All other sections names are valid repository section names.
+# This configuration uses the sysconfig replacement variables.
+# See http://docs.python.org/library/sysconfig.html for more details.
 #
-[_global_]
+
+[global]
 # Default global settings used in the operation of pkgmeta.
-root = /var/local/pkgmeta/repo
-cache = /var/local/pkgmeta/cache
+root = {appdata.persistent}
+cache = {appdata.disposable}
