Repository configuration object output from the pkgmeta configuration object. Default repository is set by the pkgmeta configuration object during the pkgmeta.cfg read in.

--- a/pkgmeta/base_config/pkgmeta.cfg
+++ b/pkgmeta/base_config/pkgmeta.cfg
@@ -11,3 +11,8 @@
 # Default global settings used in the operation of pkgmeta.
 root = {appdata.persistent}
 cache = {appdata.disposable}
+default = default
+
+[default]
+sources =
+    http://repo.pkgmeta.org/ pypi
